:bug: Fix horizontal scrollbar hidden

--- a/frontend/resources/styles/main/partials/viewer.scss
+++ b/frontend/resources/styles/main/partials/viewer.scss
@@ -7,7 +7,7 @@
 }
 
 .viewer-preview {
-  height: calc(100vh - 40px);
+  height: calc(100vh - 48px);
 
   grid-row: 1 / span 2;
   grid-column: 1 / span 1;
